# SophiBot

./: .gitignore  .replit  LICENSE  README.md  bot.py  pyproject.toml
cogs/: !help.py  counting.py  cron.py  data.py  economy.py  error_handler.py  fun.py  levelling.py  rank.py  tags.py  utility.py
db/: db.py
func/: DUMP.md  cooldown.py  data.py  db.py  ez.py  lyrics.py  server.py  tagfinder.py
func/lyrics/: lyrics.py  title_lyrics.py  tv_lyrics.py
func/lyrics/albums/: debut.py
removed/: levelling.py
